--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web-services', version: '2.2.5.RELEASE'
-    providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    compileOnly 'org.projectlombok:lombok'
     compile 'org.mybatis:mybatis:3.5.4'
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.2'
     compile 'org.mariadb.jdbc:mariadb-java-client:2.6.0'
